Improve stats presentation and protocol consistency